<resources>

    <!-- Info on placeholders: http://www.piwai.info/android-string-placeholders/ -->


    <!-- Language codes of languages where the string is not translated to as comment after each string. -->
    <string name="app_name" translatable="false">If I Were You</string> <!-- de -->
    <string name="facebook_app_id" translatable="false">1543123995900304</string>

    <!-- Page Titles (Currently not used) NOT TRANSLATED -->
    <string name="feedPageTitle">Feed</string>
    <string name="challengesPageTitle">Challenges</string>
    <string name="toplistPageTitle">Top List</string>
    <string name="highscorePageTitle">Highscore</string>

    <!-- General Strings -->
    <string name="unknownError">An unknown error occurred. Please try again later.</string>
    <string name="login">Login</string> <!-- de -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="emailMissing">Your email address is missing. Please enter it and try again.</string>
    <string name="passwordMissing">The password is missing. Please enter it and try again.</string>

    <!-- Action Bar Items -->
    <string name="action_add_contact">Add Contact</string>
    <string name="action_new_challenge">New Challenge</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_account">Delete account</string>
    <string name="action_logout">Logout</string>

    <!-- Activity Names -->
    <string name="title_add_contact">Add Contact</string>
    <string name="title_new_challenge">New Challenge</string>
    <string name="title_challenge">Challenge</string>
    
    <!-- Email Login Activity -->
    <string name="noAccountButton">I don\'t have an account. Register me!</string>
    <string name="loginUppercase">LOGIN</string> <!-- de -->
    <string name="incorrectLoginData">Incorrect email or password</string>
    
    <!-- Registration Activity -->
    <string name="emailAlreadyInUse">This email address is already in use. Please login.</string>
    <string name="passwordNoMatch">The passwords don\'t match.</string>
    <string name="registerlUppercase">REGISTER</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="register">Register</string>

    <string name="registrationNameMissing">Please enter your name to complete the registration.</string>

    <!-- Challenges Master View -->
    <string name="challenges_master_no_challenges">You have currently no challenges</string>

    <!-- Challenge Detail -->
    <string name="action_send_challenge">Send Challenge</string>
    <string name="message_challenge_input_hint">Send a Challenge</string>
    <string name="fulfill_challenge">Fulfill</string>
    <string name="cancel_challenge">Cancel</string>
    <string name="no_answer_yet">No answer yet</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="fulfilled">Fulfilled</string>
    <string name="cancelled">Cancelled</string>
    <string name="only_one_outgoing_challenge">You can only send one challenge per opponent at a time</string>

    <!-- Highscore Master View -->
    <string name="highscore_master_no_entries">There is currently no highscore list available</string>

    <!-- Top Challenges Master View -->
    <string name="top_challenges_master_no_entries">There is currently no top challenges list available</string>

    <!-- New Challenge -->
    <string name="new_challenge_no_contacts">You can only start a new challenge with a contact, unfortunately you don\'t have any contacts yet</string>

    <!-- Add Contact -->
    <string name="add_contact_message">Please enter the email address of the contact you want to add:</string>
    <string name="add_contact_email_label">Email</string>
    <string name="add_contact_add_button_label">Add</string>
    <string name="add_contact_email_not_valid_message">The email address you entered is not valid.</string>
    <string name="invite_friend_already_exists_message"> An account with the email address you entered already exists.</string>
    <string name="invite_friend_email_sent_message"> An invitation email has been sent.</string>
    <string name="add_contact_fail_message">A user with the email address %1$s does not exist.</string>
    
    <!-- Login Screen -->
    <string name="welcome">Welcome to If I Were You</string>
    <string name="loginEmail">Login with E-Mail</string>
    <string name="add_contact_success">Contact successfully added to your friend list</string>
    <string name="add_contact_failure">There was a problem with saving your friendship</string>
    <string name="add_contact_already_exists">The contact is already in your contact list</string>
    <string name="title_invite_friend">Invite Friend</string>
    <!-- Notifications -->
    <string name="challenge_accepted">Accepted your challenge</string>
    <string name="challenge_declined">Declined your challenge</string>
    <string name="challenge_fulfilled">Fulfilled your challenge</string>
    <string name="challenge_canceled">Canceled your challenge</string>
    <string name="new_fried">Added you as a friend</string>

    <string name="title_profile">Profile</string>
    <string name="button_save">Save</string>
    <string name="save_profile">Profile changes successfully saved</string>

    <string name="labelChallengesOverall">Overall challenges in If I Were you:</string>
    <string name="labelChallengesIncoming">Incoming challenges:</string>
    <string name="labelChallengesOutgoing">Outgoing challenges:</string>
    <string name="labelChallengesOpen">Open challenges:</string>
    <string name="labelChallengesAccepted">Accepted challenges:</string>
    <string name="labelChallengesDeclined">Declined challenges:</string>
    <string name="labelChallengesCanceled">Canceled challenges:</string>
    <string name="labelChallengesFulfilled">Fulfilled challenges:</string>

    <string name="addContact">Add Contact</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>

</resources>