<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- showAsAction "always" is used instead of "ifRoom" -->

    <!-- New Challenge, should appear as action button -->
    <item
        android:id="@+id/action_new_challenge"
        android:icon="@drawable/ic_action_new_event"
        android:title="@string/action_new_challenge"
        app:showAsAction="always" />
    <!-- Add Contact, should appear as action button -->
    <item
        android:id="@+id/action_add_contact"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/action_add_contact"
        app:showAsAction="always" />
    <!-- Link to Profile -->
    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_account"
        android:title="@string/action_delete_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>