<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/password"
            android:layout_below="@id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordConfirm"
            android:layout_below="@id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordConfirm"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/firstName" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstName"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/lastName" />

        <Button
            android:id="@+id/registerButton"
            android:layout_below="@id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/register" />

    </RelativeLayout>
</ScrollView>