<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_below="@id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/facebookLogin"
        android:layout_alignRight="@+id/facebookLogin"
        android:layout_marginTop="32dp"
        android:text="@string/login"/>

    <Button
        android:id="@+id/facebookLogin"
        style="@style/com_facebook_loginview_default_style"
        android:text="Log In With Facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp" />

</RelativeLayout>